--- a/CIUDADANO.html
+++ b/CIUDADANO.html
@@ -67,6 +67,25 @@
             font-size: 16px;
         }
 
+        /* ---------- VIDEO RESPONSIVE ---------- */
+        .video-container {
+            position: relative;
+            width: 100%;
+            padding-bottom: 56.25%; /* Proporción 16:9 */
+            margin: 25px 0;
+            height: 0;
+        }
+
+        .video-container video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 12px;
+        }
+
+        /* ------ Responsive Text ------ */
         @media (max-width: 600px) {
             h1 {
                 font-size: 36px;
@@ -99,21 +118,22 @@
 
             <p><strong>En resumen:</strong> La ciudadanía implica participación, responsabilidad y pertenencia a una comunidad.</p>
         </section>
-        <center>
 
-    <video width="700" height="400" controls>
-        <source src="video.mp4" type="video/mp4">
-        </video>
-    </center>
-          <h2>Descargar archivo</h2>
+        <!-- VIDEO RESPONSIVE -->
+        <div class="video-container">
+            <video controls>
+                <source src="video.mp4" type="video/mp4">
+                Tu navegador no soporta videos HTML5.
+            </video>
+        </div>
 
-    <!-- Enlace de descarga desde Google Drive -->
-    <a class="btn" href="https://concepto.de/ciudadano/" target="_blank">
-      Descargar archivo
-    </a>
+        <h2>Descargar archivo</h2>
 
+        <!-- Enlace -->
+        <a class="btn" href="https://concepto.de/ciudadano/" target="_blank">
+            Descargar archivo
+        </a>
 
     </div>
 </body>
-
 </html>
