--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </li>
   </ul>
 
-  <img src="signos.png" class="logo-der">
+  <img src="sig.png" class="logo-der">
 </nav>
 
 <script>
@@ -232,5 +232,6 @@
 
 </body>
 </html>
+
 
 
