--- a/CIUDADANO.html
+++ b/CIUDADANO.html
@@ -127,13 +127,10 @@
             </video>
         </div>
 
-        <h2>Descargar archivo</h2>
-
-        <!-- Enlace -->
-        <a class="btn" href="https://concepto.de/ciudadano/" target="_blank">
-            Descargar archivo
-        </a>
+       <h2>Descarga</h2>
+      <a class="btn" href="data:text/plain,Ejemplo%20de%20archivo%20para%20ciudadano." download="ciudadano.pdf">DESCARGAR ARCHIVO</a>
 
     </div>
 </body>
 </html>
+
