--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <li><a href="CIUDADANO.html">Ciudadano</a></li>
 
     <li onclick="toggleSub(this)">
-      <a>Trámite</a>
+      <a href="tramite.html">Tramite</a>
       <ul>
         <li><a href="tramitess.html">Administrativos</a></li>
         <li><a href="TR.html">Gestionar Trámite</a></li>
@@ -195,15 +195,16 @@
     <li><a href="SOLICITUD.html">Solicitud</a></li>
 
     <li onclick="toggleSub(this)">
-      <a>Pago</a>
+      <a href="pago.html">Pago</a>
       <ul>
         <li><a href="SERVICIOS.html">Servicios y Derechos</a></li>
         <li><a href="pago ciudadano.html">Pagos Ciudadanos</a></li>
       </ul>
     </li>
 
-    <li onclick="toggleSub(this)">
-      <a>Documento</a>
+  <li onclick="toggleSub(this)">
+
+      <a href="docc.html">Documento</a>
       <ul>
         <li><a href="GALERIA.html">Galería</a></li>
       </ul>
@@ -232,6 +233,3 @@
 
 </body>
 </html>
-
-
-
