--- a/actaa.html
+++ b/actaa.html
@@ -85,7 +85,7 @@
     <div class="container">
         <h1>ACTA DE NACIMIENTO</h1>
 
-        <img src="acta.JPG" alt="Ejemplo de CURP">
+        <img src="acta.jpg" alt="Ejemplo de CURP">
 
         <section>
             
@@ -114,4 +114,5 @@
         
     </div>
 </body>
+
 </html>
