--- a/actaa.html
+++ b/actaa.html
@@ -85,7 +85,7 @@
     <div class="container">
         <h1>ACTA DE NACIMIENTO</h1>
 
-        <img src="acta.jpg" alt="Ejemplo de CURP">
+        <img src="al.jpg" alt="Ejemplo de CURP">
 
         <section>
             
@@ -116,3 +116,4 @@
 </body>
 
 </html>
+
