--- a/curp.html
+++ b/curp.html
@@ -82,7 +82,7 @@
     <div class="container">
         <h1>CURP</h1>
 
-        <img src="curp.JPG" alt="Ciudadanía">
+        <img src="ff.jpeg" alt="Ciudadanía">
 
         <section>
             
@@ -125,4 +125,5 @@
 
     </div>
 </body>
+
 </html>
