--- a/TR.html
+++ b/TR.html
@@ -9,23 +9,24 @@
   body {
     margin: 0;
     font-family: "Poppins", Arial, sans-serif;
-    background-image: url('pn.jpg'); /* Imagen de fondo */
+    background-image: url('pn.jpg');
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    min-height: 100vh;
   }
 
-  /* --- MENÚ FLOTANTE --- */
+  /* --- MENÚ PRINCIPAL --- */
   nav {
     position: absolute;
-    top: 30px;
+    top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgba(255, 236, 223, 0.85);
+    background-color: rgba(255, 236, 223, 0.9);
     backdrop-filter: blur(6px);
     border-radius: 50px;
     box-shadow: 0 6px 12px rgba(0,0,0,0.1);
     padding: 10px 25px;
+    z-index: 1000;
   }
 
   nav ul {
@@ -54,7 +55,6 @@
 
   nav ul li a:hover {
     background-color: #F8BBD0;
-    color: #1C3A5B;
   }
 
   /* --- SUBMENÚ --- */
@@ -85,11 +85,73 @@
   nav ul li:hover > ul {
     display: block;
   }
+
+  /* --- BOTÓN HAMBURGUESA --- */
+  .menu-toggle {
+    display: none;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: rgba(255, 236, 223, 0.9);
+    border: none;
+    border-radius: 10px;
+    padding: 10px 14px;
+    cursor: pointer;
+    z-index: 1100;
+    font-size: 24px;
+    color: #1C3A5B;
+  }
+
+  /* --- RESPONSIVO --- */
+  @media (max-width: 768px) {
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      transform: none;
+      width: 100%;
+      border-radius: 0;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      padding: 0;
+      display: none;
+      flex-direction: column;
+    }
+
+    nav.active {
+      display: flex;
+      background-color: rgba(255, 236, 223, 0.95);
+    }
+
+    nav ul {
+      flex-direction: column;
+      gap: 5px;
+      width: 100%;
+    }
+
+    nav ul li a {
+      text-align: center;
+      padding: 15px;
+      border-radius: 0;
+      width: 100%;
+    }
+
+    nav ul li ul {
+      position: static;
+      box-shadow: none;
+      background: rgba(255, 255, 255, 0.9);
+    }
+
+    .menu-toggle {
+      display: block;
+    }
+  }
 </style>
 </head>
 
 <body>
-  <nav>
+  <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+  <nav id="menu">
     <ul>
       <li><a href="https://gobmx.page/ActaNacimiento/">ACTA</a>
         <ul>
@@ -112,10 +174,8 @@
       </li>
 
       <li><a href="https://share.google/D3IEMuwBrTL2FHDaa">SAT</a>
-         <ul>
+        <ul>
           <li><a href="sat.html">Definición</a></li>
-       
-
           <li><a href="https://citas.sat.gob.mx/">Agendar Cita</a></li>
           <li><a href="https://share.google/kg2M34giuzqjyeFCn">RFC</a></li>
           <li><a href="https://wwwmat.sat.gob.mx/aplicacion/53027/genera-tu-constancia-de-situacion-fiscal">Constancia de Situación Fiscal</a></li>
@@ -124,15 +184,23 @@
       </li>
 
       <li><a href="https://share.google/bEhPbZOFD9ReqhYrG">REGISTRO CIVIL</a>
-      <ul>
-        <li><a href="siv.html">Definición</a></li>
+        <ul>
+          <li><a href="siv.html">Definición</a></li>
+        </ul>
+      </li>
 
-</ul>
       <li><a href="https://share.google/xf8e4fKcFUgO9Znsu">PASAPORTE</a>
         <ul>
-      <li><a href="pasa.html">Definicion</a></li>
-
+          <li><a href="pasa.html">Definición</a></li>
+        </ul>
+      </li>
     </ul>
   </nav>
+
+  <script>
+    function toggleMenu() {
+      document.getElementById("menu").classList.toggle("active");
+    }
+  </script>
 </body>
 </html>
