--- a/TR.html
+++ b/TR.html
@@ -17,16 +17,16 @@
 
   /* --- MENÚ PRINCIPAL --- */
   nav {
-    position: absolute;
+    position: relative;
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
     background-color: rgba(255, 236, 223, 0.9);
     backdrop-filter: blur(6px);
-    border-radius: 50px;
+    border-radius: 20px;
     box-shadow: 0 6px 12px rgba(0,0,0,0.1);
     padding: 10px 25px;
-    z-index: 1000;
+    width: fit-content;
   }
 
   nav ul {
@@ -37,6 +37,7 @@
     align-items: center;
     justify-content: center;
     gap: 15px;
+    flex-wrap: wrap;
   }
 
   nav ul li {
@@ -55,6 +56,7 @@
 
   nav ul li a:hover {
     background-color: #F8BBD0;
+    color: #1C3A5B;
   }
 
   /* --- SUBMENÚ --- */
@@ -86,72 +88,48 @@
     display: block;
   }
 
-  /* --- BOTÓN HAMBURGUESA --- */
-  .menu-toggle {
-    display: none;
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    background-color: rgba(255, 236, 223, 0.9);
-    border: none;
-    border-radius: 10px;
-    padding: 10px 14px;
-    cursor: pointer;
-    z-index: 1100;
-    font-size: 24px;
-    color: #1C3A5B;
-  }
-
-  /* --- RESPONSIVO --- */
+  /* --- RESPONSIVO (TELÉFONO) --- */
   @media (max-width: 768px) {
     nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      transform: none;
-      width: 100%;
-      border-radius: 0;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      padding: 0;
-      display: none;
-      flex-direction: column;
-    }
-
-    nav.active {
-      display: flex;
-      background-color: rgba(255, 236, 223, 0.95);
+      width: 90%;
+      left: 50%;
+      transform: translateX(-50%);
+      border-radius: 15px;
+      padding: 10px;
     }
 
     nav ul {
       flex-direction: column;
-      gap: 5px;
-      width: 100%;
+      align-items: stretch;
+      gap: 8px;
     }
 
     nav ul li a {
       text-align: center;
-      padding: 15px;
-      border-radius: 0;
       width: 100%;
+      background-color: rgba(255,255,255,0.8);
+      border-radius: 12px;
     }
 
     nav ul li ul {
       position: static;
       box-shadow: none;
-      background: rgba(255, 255, 255, 0.9);
+      background: transparent;
+      display: block;
+      padding-left: 15px;
     }
 
-    .menu-toggle {
-      display: block;
+    nav ul li ul li a {
+      background-color: rgba(255, 255, 255, 0.6);
+      border-radius: 10px;
+      margin-top: 4px;
     }
   }
 </style>
 </head>
 
 <body>
-  <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-
-  <nav id="menu">
+  <nav>
     <ul>
       <li><a href="https://gobmx.page/ActaNacimiento/">ACTA</a>
         <ul>
@@ -196,11 +174,5 @@
       </li>
     </ul>
   </nav>
-
-  <script>
-    function toggleMenu() {
-      document.getElementById("menu").classList.toggle("active");
-    }
-  </script>
 </body>
 </html>
