--- a/docc.html
+++ b/docc.html
@@ -66,6 +66,28 @@
             font-size: 16px;
         }
 
+        /* --- VIDEO RESPONSIVO --- */
+        .video-container {
+            position: relative;
+            width: 100%;
+            padding-bottom: 56.25%; /* Proporción 16:9 */
+            height: 0;
+            overflow: hidden;
+            border-radius: 12px;
+            box-shadow: 0 6px 16px rgba(160, 102, 201, 0.25);
+            margin-top: 30px;
+        }
+
+        .video-container video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-radius: 12px;
+        }
+
         @media (max-width: 600px) {
             h1 {
                 font-size: 36px;
@@ -101,11 +123,12 @@
             <p><strong>Importancia:</strong> Contar con documentos actualizados garantiza acceso a servicios educativos, de salud, apoyo social y derechos civiles.</p>
         </section>
 
-        <center>
-            <video width="700" height="400" controls>
+        <div class="video-container">
+            <video controls>
                 <source src="doc.mp4" type="video/mp4">
+                Tu navegador no soporta videos.
             </video>
-        </center>
+        </div>
     </div>
 </body>
 </html>
