--- a/actaa.html
+++ b/actaa.html
@@ -107,7 +107,7 @@
     <div class="container">
         <h1>ACTA DE NACIMIENTO</h1>
 
-        <img src="al.JPG" alt="Ejemplo de Acta de Nacimiento">
+        <img src="al.jpg" alt="Ejemplo de Acta de Nacimiento">
 
         <section>
             <p><strong>Importancia del acta de nacimiento</strong></p>
@@ -134,4 +134,5 @@
     </div>
 </body>
 </html>
+
 
