--- a/curp.html
+++ b/curp.html
@@ -115,7 +115,7 @@
     <div class="container">
         <h1>CURP</h1>
 
-        <img src="ff.JPEG" alt="Ejemplo de CURP">
+        <img src="ff.jpeg" alt="Ejemplo de CURP">
 
         <section>
             <p><strong>¿Qué es la CURP?</strong></p>
@@ -153,4 +153,5 @@
     </div>
 </body>
 </html>
+
 
