--- a/visi.html
+++ b/visi.html
@@ -94,7 +94,7 @@
     <div class="container">
         <h1>VISITANTES EN GUÍAS CIUDADANAS</h1>
 
-        <img src="visitantes.jpg" alt="Personas explorando Guías Ciudadanas">
+        <img src="ll.png" alt="Personas explorando Guías Ciudadanas">
 
         <section>
             <p>Las <strong>Guías Ciudadanas</strong> están diseñadas para ayudar tanto a los residentes como a los <strong>visitantes</strong> a conocer los trámites, servicios y derechos disponibles dentro de una comunidad o institución.</p>
@@ -127,3 +127,4 @@
 
 </body>
 </html>
+
