--- a/SOLICITUD.html
+++ b/SOLICITUD.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trámite</title>
+    <title>Solicitud</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
 
@@ -79,9 +79,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Solicitudes</h1>
+        
 
-        <img src="sol.jpg" alt="Trámites Ciudadanos">
+        <img src="sol.png" alt="Trámites Ciudadanos">
 
         <section>
             <p>Las <strong>solicitudes ciudadanas</strong> son peticiones formales que las personas realizan ante instituciones públicas para obtener un servicio, respuesta, apoyo o trámite específico.</p>
@@ -92,6 +92,8 @@
 
             <p><strong>Solicitud de información:</strong> Permite pedir datos oficiales a instituciones gubernamentales, como requisitos, procesos o documentos.</p>
 
+             <img src="soll.jpg" alt="Registro Civil de México">
+
             <p><strong>Solicitudes de apoyo:</strong> Incluyen becas, ayudas económicas, servicios médicos, vivienda o programas sociales.</p>
 
             <p><strong>Permisos y constancias:</strong> Se utilizan para autorizar actividades, registrar datos o comprobar situaciones oficiales.</p>
@@ -99,6 +101,14 @@
             <p><strong>Proceso:</strong> Generalmente consiste en llenar un formulario, entregar documentos, presentar identificación y esperar respuesta oficial dentro de un tiempo establecido.</p>
 
             <p><strong>Importancia:</strong> Las solicitudes ciudadanas garantizan la comunicación entre personas e instituciones, facilitando el acceso a derechos, servicios y soluciones administrativas.</p>
+
+
+<center>
+            <video width="560" height="315" controls>
+  <source src="sol.mp4" type="video/mp4">
+  Tu navegador no soporta la reproducción de videos.
+</video>
+</center>
         </section>
 
         
