--- a/SOLICITUD.html
+++ b/SOLICITUD.html
@@ -105,7 +105,7 @@
 
 <center>
             <video width="560" height="315" controls>
-  <source src="sol.mp4" type="video/mp4">
+  <source src="soll.mp4" type="video/mp4">
   Tu navegador no soporta la reproducción de videos.
 </video>
 </center>
@@ -114,3 +114,4 @@
         
 </body>
 </html>
+
