--- a/SOLICITUD.html
+++ b/SOLICITUD.html
@@ -81,7 +81,7 @@
     <div class="container">
         
 
-        <img src="sol.png" alt="Trámites Ciudadanos">
+        <img src="sol.jpg" alt="Trámites Ciudadanos">
 
         <section>
             <p>Las <strong>solicitudes ciudadanas</strong> son peticiones formales que las personas realizan ante instituciones públicas para obtener un servicio, respuesta, apoyo o trámite específico.</p>
@@ -114,4 +114,5 @@
         
 </body>
 </html>
+
 
